[gd_scene load_steps=22 format=2]

[ext_resource path="res://Resources/stadium.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/soccerfield.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Ball3D.gd" type="Script" id=4]
[ext_resource path="res://Resources/ball.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Goal.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/Ball3DStriker.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Ball3DGoalie.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Ball3DMidfielder.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/ball3dplayer.png" type="Texture" id=10]
[ext_resource path="res://Resources/UI/FredokaOne-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Resources/UI/Tourmaline-Bold.ttf" type="DynamicFontData" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1765.75, 192 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 82.875, 469.75 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 82.875, 469.75 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1493, 128.75 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.5
bounce = 0.8

[sub_resource type="CircleShape2D" id=4]
radius = 40.0125

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
size = 128
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 12 )

[node name="Ball3D" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1509, -192 )
scale = Vector2( 5.47039, 5.47039 )
texture = ExtResource( 1 )

[node name="Field" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Field"]
position = Vector2( 1417, -37 )
scale = Vector2( 2.42529, 2.42529 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field"]
position = Vector2( 1415.75, 187 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Field"]
position = Vector2( -83, -341 )
rotation = 0.499164
shape = SubResource( 5 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Field"]
position = Vector2( 2910, -264 )
rotation = -0.523599
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Field"]
position = Vector2( 1384, -587.25 )
shape = SubResource( 6 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 220, -34 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.8, 0.8 )

[node name="Ball" type="RigidBody2D" parent="."]
position = Vector2( 407, -86 )
collision_layer = 32
collision_mask = 2
mass = 2.0
physics_material_override = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="HomeGoal" parent="." instance=ExtResource( 6 )]
position = Vector2( -76, 0 )
scale = Vector2( 0.3, 0.3 )
z_index = 1
home_team = true

[node name="AwayGoal" parent="." instance=ExtResource( 6 )]
position = Vector2( 2858, 0 )
scale = Vector2( 0.3, 0.3 )
z_index = 1

[node name="Ball3DGoalie" parent="." instance=ExtResource( 8 )]
position = Vector2( 2708, -89 )

[node name="Ball3DStriker" parent="." instance=ExtResource( 7 )]
position = Vector2( 1460, -48 )

[node name="Ball3DMidfielder" parent="." instance=ExtResource( 9 )]
position = Vector2( 2085, -56 )

[node name="Ball3Dplayer" type="Sprite" parent="."]
position = Vector2( 3130, 183 )
rotation = 0.87441
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="Ball3Dplayer"]
margin_left = -75.1565
margin_top = -78.4827
margin_right = 86.8435
margin_bottom = -38.4827
custom_fonts/font = SubResource( 7 )
text = "binkelderg"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
margin_left = 797.0
margin_top = 32.0
margin_right = 1116.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 8 )
text = "0 - 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clarify" type="Label" parent="CanvasLayer"]
margin_left = 876.0
margin_top = 161.0
margin_right = 1195.0
margin_bottom = 294.0
custom_fonts/font = SubResource( 9 )
text = "First to 3"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="goal" from="HomeGoal" to="." method="_on_HomeGoal_goal"]
[connection signal="goal" from="AwayGoal" to="." method="_on_AwayGoal_goal"]
